--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,19 @@
 .card img {
     width: 100%;
 }
+
+#agendamento {
+    background-image: url(../imagens/agendamento.jpg);
+    /* background-position: center; */
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#formulario {
+    max-width: 600px;
+    margin: 50px auto;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
