--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,11 +9,11 @@
     background-repeat: no-repeat;
 }
 
-#formulario {
+/* #formulario {
     max-width: 600px;
     margin: 50px auto;
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
+} */
