--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,10 +48,10 @@
     padding-bottom: 80px;
 }
 
-#servicos {
+/* #servicos {
     background-image: url(../imagens/fundo-servicos.jpg);
     background-size: cover;
-}
+} */
 
 #fundo-form {
     padding: 20px;
